--- a/src/main/resources/KhachHang.fxml
+++ b/src/main/resources/KhachHang.fxml
@@ -14,15 +14,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<<<<<<<< HEAD:src/main/resources/KhachHang.fxml
-<Pane fx:id="khachHangPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="958.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.GuiController.KhachHangController">
-========
-<Pane fx:id="khuyenMaiTheoHoaDonPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="958.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
->>>>>>>> origin/MinhThu:src/main/resources/KmtheoSanPham.fxml
+<Pane fx:id="khachHangPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="699.0" prefWidth="1241.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.GuiController.KhachHangController">
     <children>
-        <SplitPane dividerPositions="0.23755750731911332" layoutX="-1.0" layoutY="-5.0" prefHeight="567.0" prefWidth="958.0">
+        <SplitPane dividerPositions="0.23755750731911332" layoutX="-4.0" layoutY="-3.0" prefHeight="718.0" prefWidth="1250.0">
             <items>
-                <AnchorPane fx:id="anchorPaneMenu" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #00A4EF;">
+                <AnchorPane fx:id="anchorPaneMenu" minHeight="0.0" minWidth="0.0" prefHeight="709.0" prefWidth="239.0" style="-fx-background-color: #00A4EF;">
                     <children>
                         <Button fx:id="btnThongKe" layoutY="57.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Thống kê">
                             <font>
@@ -67,79 +63,51 @@
                         </Button>
                     </children>
                 </AnchorPane>
-                <AnchorPane fx:id="khachHangAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                <AnchorPane fx:id="khachHangAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="701.0" prefWidth="726.0">
                     <children>
-                        <TableView fx:id="tableView" layoutY="196.0" prefHeight="384.0" prefWidth="742.0" AnchorPane.leftAnchor="0.0">
+                        <TableView fx:id="tableView" layoutY="196.0" prefHeight="517.0" prefWidth="966.0" AnchorPane.leftAnchor="0.0">
                             <columns>
-<<<<<<<< HEAD:src/main/resources/KhachHang.fxml
                                 <TableColumn fx:id="maKhachHangColumn" prefWidth="101.6000549197197" text="Mã khách hàng" />
-                                <TableColumn fx:id="hoKhachHangColumn" prefWidth="141.5999755859375" text="Họ " />
-                                <TableColumn fx:id="tenKhachHangColumn" prefWidth="100.79997253417969" text="Tên" />
-                                <TableColumn fx:id="diaChiKhachHangColumn" prefWidth="139.20001220703125" text="Địa chỉ" />
-                                <TableColumn fx:id="emailKhachHangColumn" prefWidth="106.39996337890625" text="Email" />
-                                <TableColumn fx:id="sdtKhachHangColumn" prefWidth="135.2000732421875" text="Số điện thoại" />
+                                <TableColumn fx:id="hoKhachHangColumn" prefWidth="181.5999755859375" text="Họ " />
+                                <TableColumn fx:id="tenKhachHangColumn" prefWidth="60.800048828125" text="Tên" />
+                                <TableColumn fx:id="diaChiKhachHangColumn" prefWidth="269.5999755859375" text="Địa chỉ" />
+                                <TableColumn fx:id="emailKhachHangColumn" prefWidth="108.0" text="Email" />
+                                <TableColumn fx:id="sdtKhachHangColumn" prefWidth="220.8001708984375" text="Số điện thoại" />
                             </columns>
                         </TableView>
                         <TextField fx:id="txt_timKiemKhachHang" layoutX="33.0" layoutY="29.0" promptText="Tìm kiếm..." styleClass="text-field-box" />
                         <Button fx:id="btn_timKiemKhachHang" layoutX="217.0" layoutY="29.0" mnemonicParsing="false" onAction="#timKiem" styleClass="btn" text="Tìm kiếm" />
-                        <Button fx:id="btn_themKhachHang" layoutX="602.0" layoutY="150.0" mnemonicParsing="false" onAction="#openInforContainer" styleClass="btn" text="Thêm khách hàng" />
-                        <Pane fx:id="inforContainerKhachHang" prefHeight="566.0" prefWidth="726.0">
-========
-                                <TableColumn fx:id="maChuongTrinhKMColumn" prefWidth="251.3333282470703" text="Mã Chương Trình Khuyến Mãi" />
-                                <TableColumn fx:id="maSanPhamColumn" prefWidth="217.3333740234375" text="Mã Sản Phẩm" />
-                                <TableColumn fx:id="phanTramKMColumn" prefWidth="219.33331298828125" text="\% Khuyến Mãi" />
-                            </columns>
-                        </TableView>
-                        <TextField fx:id="textFieldTimKiem" layoutX="33.0" layoutY="29.0" promptText="Tìm kiếm..." styleClass="text-field-box" />
-                        <Button layoutX="217.0" layoutY="29.0" mnemonicParsing="false" onAction="#timKiem" styleClass="btn" text="Tìm kiếm" />
-                        <Button layoutX="602.0" layoutY="150.0" mnemonicParsing="false" onAction="#openInforContainer" styleClass="btn" text="Thêm" />
-                        <Pane fx:id="inforContainer" layoutX="-2.0" prefHeight="567.0" prefWidth="984.0">
->>>>>>>> origin/MinhThu:src/main/resources/KmtheoSanPham.fxml
+                        <Button fx:id="btn_themKhachHang" layoutX="814.0" layoutY="138.0" mnemonicParsing="false" onAction="#openInforContainer" styleClass="btn" text="Thêm khách hàng" />
+                        <Pane fx:id="inforContainerKhachHang" layoutX="159.0" layoutY="201.0" prefHeight="417.0" prefWidth="610.0">
                             <children>
-                                <VBox fx:id="inforForm" layoutX="219.0" layoutY="75.0" prefHeight="188.0" prefWidth="273.0" spacing="15.0" styleClass="inforForm">
+                                <VBox fx:id="inforForm" layoutX="96.0" layoutY="-46.0" prefHeight="319.0" prefWidth="382.0" spacing="15.0" styleClass="inforForm">
                                     <children>
                                         <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
-<<<<<<<< HEAD:src/main/resources/KhachHang.fxml
                                             <children>
                                                 <TextField fx:id="txt_maKhachHang" prefHeight="25.0" prefWidth="375.0" promptText="Mã khách hàng" />
                                             </children>
-========
->>>>>>>> origin/MinhThu:src/main/resources/KmtheoSanPham.fxml
                                             <VBox.margin>
                                                 <Insets />
                                             </VBox.margin>
                                         </HBox>
                                         <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
                                             <children>
-<<<<<<<< HEAD:src/main/resources/KhachHang.fxml
                                                 <TextField fx:id="txt_hoKhachHang" prefHeight="26.0" prefWidth="369.0" promptText="Họ tên lót" />
-========
-                                                <TextField fx:id="txt_maChuongTrinhKhuyenMai" prefHeight="26.0" prefWidth="234.0" promptText="Mã Chương Trình Khyến Mãi" />
->>>>>>>> origin/MinhThu:src/main/resources/KmtheoSanPham.fxml
                                             </children>
                                         </HBox>
                                         <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
                                             <children>
-<<<<<<<< HEAD:src/main/resources/KhachHang.fxml
                                                 <TextField fx:id="txt_tenKhachHang" prefHeight="26.0" prefWidth="369.0" promptText="Tên" />
-========
-                                                <TextField fx:id="txt_maSanPham" prefHeight="26.0" prefWidth="235.0" promptText="Mã Sản Phẩm" />
->>>>>>>> origin/MinhThu:src/main/resources/KmtheoSanPham.fxml
                                             </children>
                                         </HBox>
                                         <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
                                             <children>
-<<<<<<<< HEAD:src/main/resources/KhachHang.fxml
                                                 <TextField fx:id="txt_emailKhachHang" prefHeight="25.0" prefWidth="369.0" promptText="Email" />
                                                 <TextField fx:id="txt_sdtKhachHang" prefHeight="25.0" prefWidth="283.0" promptText="Thông tin liên lạc" />
-========
-                                                <TextField fx:id="txt_phanTramKhuyenMai" prefHeight="26.0" prefWidth="234.0" promptText="\% Khuyến Mãi" />
->>>>>>>> origin/MinhThu:src/main/resources/KmtheoSanPham.fxml
                                             </children>
                                         </HBox>
                                         <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
                                             <children>
-<<<<<<<< HEAD:src/main/resources/KhachHang.fxml
                                                 <TextField fx:id="txt_diaChiKhachHang" prefHeight="25.0" prefWidth="424.0" promptText="Địa chỉ" />
                                             </children>
                                         </HBox>
@@ -152,19 +120,6 @@
                                                 <Cursor fx:constant="DEFAULT" />
                                             </cursor>
                                         </HBox>
-========
-                                                <HBox fx:id="inforFormButtonContainer" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
-                                                    <children>
-                                                        <Button fx:id="btnAddKM" mnemonicParsing="false" onAction="#addKhuyenMai" text="Thêm" />
-                                                        <Button mnemonicParsing="false" onAction="#clossInforContainer" text="Đóng" />
-                                                    </children>
-                                                    <cursor>
-                                                        <Cursor fx:constant="DEFAULT" />
-                                                    </cursor>
-                                                </HBox>
-                                            </children>
-                                        </HBox>
->>>>>>>> origin/MinhThu:src/main/resources/KmtheoSanPham.fxml
                                     </children>
                                     <padding>
                                         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
