--- a/src/main/resources/TaoHoaDon.fxml
+++ b/src/main/resources/TaoHoaDon.fxml
@@ -90,7 +90,7 @@
                                     <Button fx:id="btnAdd" layoutX="30.0" layoutY="307.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="75.0" styleClass="btn" text="Thêm" />
                                     <TextField fx:id="textFieldMaNV" layoutX="76.0" layoutY="118.0" prefHeight="30.0" prefWidth="150.0" promptText="Mã NV" styleClass="text-field-box" />
                                     <TextField fx:id="textFieldMaKH" layoutX="77.0" layoutY="163.0" prefHeight="30.0" prefWidth="146.0" promptText="Mã KH" styleClass="text-field-box" />
-                                    <Button layoutX="181.0" layoutY="480.0" mnemonicParsing="false" onAction="#onXuatHoaDonClicked" text="Xuất hóa đơn" />
+                                    <Button layoutX="155.0" layoutY="480.0" mnemonicParsing="false" onAction="#onXuatHoaDonClicked" prefHeight="26.0" prefWidth="123.0" text="Xuất hóa đơn" />
                                     <Label layoutX="14.0" layoutY="79.0" prefHeight="18.0" prefWidth="54.0" text="Mã HD " />
                                     <TextField fx:id="textFieldMaHoaDon" layoutX="76.0" layoutY="75.0" prefHeight="30.0" prefWidth="150.0" />
                                     <Label layoutX="14.0" layoutY="124.0" prefHeight="18.0" prefWidth="54.0" text="Mã NV " />
@@ -99,6 +99,8 @@
                                     <Label layoutX="14.0" layoutY="259.0" prefHeight="18.0" prefWidth="54.0" text="SL" />
                                     <Button layoutX="112.0" layoutY="307.0" mnemonicParsing="false" onAction="#deleteChiTietHoaDon" prefHeight="30.0" prefWidth="75.0" text="Xóa" />
                                     <Button layoutX="193.0" layoutY="307.0" mnemonicParsing="false" onAction="#updateChiTietHoaDon" prefHeight="30.0" prefWidth="75.0" text="Sửa" />
+                                    <Label fx:id="tongTienLabel" layoutX="27.0" layoutY="354.0" prefHeight="38.0" prefWidth="224.0" text="Tổng tiền: " />
+                                    <Button layoutX="15.0" layoutY="480.0" mnemonicParsing="false" onAction="#themHoaDonMoi" prefHeight="26.0" prefWidth="121.0" text="Thêm hóa đơn mới" />
                                  </children>
                               </AnchorPane>
                         </content>
@@ -114,5 +116,6 @@
             </AnchorPane>
         </items>
       </SplitPane>
+      <Label text="Label" />
    </children>
 </Pane>
