--- a/src/main/resources/KmTheoHoaDon.fxml
+++ b/src/main/resources/KmTheoHoaDon.fxml
@@ -68,21 +68,22 @@
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                     <children>
-                        <TableView fx:id="tableView" layoutY="196.0" prefHeight="371.0" prefWidth="742.0" AnchorPane.leftAnchor="0.0">
+                        <TableView fx:id="tableView" layoutY="199.0" prefHeight="365.0" prefWidth="742.0" AnchorPane.leftAnchor="0.0">
                             <columns>
-                                <TableColumn fx:id="maChuongTrinhKMColumn" prefWidth="188.66664123535156" text="Mã Chương Trình Khuyến Mãi" />
-                                <TableColumn fx:id="tongTienColumn" prefWidth="109.33328247070312" text="Tổng Tiền" />
-                                <TableColumn fx:id="phanTramKMColumn" prefWidth="124.6666259765625" text="\% Khuyến Mãi" />
-                        <TableColumn fx:id="ngayBatDauColumn" prefWidth="150.66668701171875" text="Ngày Bât Đầu" />
-                        <TableColumn fx:id="ngayKetThucColumn" prefWidth="155.3333740234375" text="Ngày Kết Thúc" />
+                                <TableColumn fx:id="maChuongTrinhKMColumn" prefWidth="139.3333282470703" text="Mã Chương Trình KM" />
+                                <TableColumn fx:id="maSanPhamColumn" prefWidth="117.33331298828125" text="Mã Sản Phẩm" />
+                                <TableColumn fx:id="phanTramKMColumn" minWidth="0.0" prefWidth="113.33334350585938" text="\% Khuyến Mãi" />
+                        <TableColumn fx:id="ngayBatDauColumn" prefWidth="120.66668701171875" text="Ngày Bắt Đầu" />
+                        <TableColumn fx:id="ngayKetThucColumn" prefWidth="121.3333740234375" text="Ngày Kết Thúc" />
+                        <TableColumn fx:id="tongTienColumn" prefWidth="113.3333740234375" text="Tổng Tiền" />
                             </columns>
                         </TableView>
                         <TextField fx:id="textFieldTimKiem" layoutX="33.0" layoutY="29.0" promptText="Tìm kiếm..." styleClass="text-field-box" />
                         <Button layoutX="217.0" layoutY="29.0" mnemonicParsing="false" onAction="#timKiem" styleClass="btn" text="Tìm kiếm" />
                         <Button layoutX="624.0" layoutY="151.0" mnemonicParsing="false" onAction="#openInforContainer" prefHeight="25.0" prefWidth="84.0" styleClass="btn" text="Thêm" />
-                        <Pane fx:id="inforContainer" layoutX="-1.0" layoutY="2.0" prefHeight="162.0" prefWidth="983.0">
+                        <Pane fx:id="inforContainer" layoutX="-1.0" layoutY="2.0" prefHeight="560.0" prefWidth="983.0">
                      <children>
-                                <VBox fx:id="inforForm" layoutX="186.0" layoutY="96.0" prefHeight="234.0" prefWidth="361.0" spacing="15.0" styleClass="inforForm">
+                                <VBox fx:id="inforForm" layoutX="178.0" layoutY="114.0" prefHeight="275.0" prefWidth="355.0" spacing="15.0" styleClass="inforForm">
                                     <children>
                                         <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
                                             <VBox.margin>
@@ -97,7 +98,8 @@
                                         </HBox>
                                         <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
                                  <children>
-                                                <TextField fx:id="txt_phanTramKhuyenMai" prefHeight="26.0" prefWidth="234.0" promptText="\% Khuyến Mãi" />
+                                                <TextField fx:id="txt_phanTramKhuyenMai" prefHeight="26.0" prefWidth="153.0" promptText="\% Khuyến Mãi" />
+                                    <TextField fx:id="txt_maSanPham" promptText="Mã Sản Phẩm" />
                                  </children>
                                         </HBox>
                                         <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
