--- a/src/main/resources/KhachHang.fxml
+++ b/src/main/resources/KhachHang.fxml
@@ -70,6 +70,11 @@
                                 <Font size="16.0" />
                             </font>
                         </Button>
+                        <Button fx:id="btnPhieuNhap" layoutX="-5.0" layoutY="517.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="233.0" text="Phiếu Nhập">
+                            <font>
+                                <Font size="16.0" />
+                            </font>
+                        </Button>
                         <Button fx:id="btnNhaXuatBan" layoutY="239.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Nhà xuất bản">
                             <font>
                                 <Font size="16.0" />
