--- a/src/main/resources/NhanVien.fxml
+++ b/src/main/resources/NhanVien.fxml
@@ -57,6 +57,11 @@
                                 <Font size="16.0" />
                             </font>
                         </Button>
+                        <Button fx:id="btnPhieuNhap" layoutX="-5.0" layoutY="517.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="233.0" text="Phiếu Nhập">
+                            <font>
+                                <Font size="16.0" />
+                            </font>
+                        </Button>
                         <Button fx:id="btnKhuyenMai" layoutY="465.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Khuyến mãi">
                             <font>
                                 <Font size="16.0" />
