--- a/src/main/resources/KhuyenMai.fxml
+++ b/src/main/resources/KhuyenMai.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="khuyenMaiTheoHoaDonPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="958.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.GuiController.KmTheoHoaDonController">
+<Pane fx:id="khuyenMaiTheoHoaDonPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="958.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.GuiController.KhuyenMaiController">
     <children>
         <SplitPane dividerPositions="0.23755750731911332" layoutX="-1.0" layoutY="-5.0" prefHeight="567.0" prefWidth="958.0">
             <items>
@@ -98,8 +98,7 @@
                                         </HBox>
                                         <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
                                  <children>
-                                                <TextField fx:id="txt_phanTramKhuyenMai" prefHeight="26.0" prefWidth="153.0" promptText="\% Khuyến Mãi" />
-                                    <TextField fx:id="txt_maSanPham" promptText="Mã Sản Phẩm" />
+                                                <TextField fx:id="txt_phanTramKhuyenMai" prefHeight="26.0" prefWidth="210.0" promptText="\% Khuyến Mãi" />
                                  </children>
                                         </HBox>
                                         <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
