--- a/src/main/resources/TacGia.fxml
+++ b/src/main/resources/TacGia.fxml
@@ -15,55 +15,61 @@
     <children>
         <SplitPane dividerPositions="0.23755750731911332" layoutX="-1.0" layoutY="-4.0" prefHeight="569.0" prefWidth="958.0">
             <items>
-            <AnchorPane fx:id="anchorPaneMenu1" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #00A4EF;">
-               <children>
-                  <Button fx:id="btnThongKe" alignment="CENTER" layoutY="57.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Thống kê" AnchorPane.leftAnchor="0.0">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="btnKhachHang" alignment="CENTER" layoutY="210.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Khách hàng" AnchorPane.leftAnchor="0.0">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="btnSanPham" alignment="CENTER" layoutY="159.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Sản phẩm" AnchorPane.leftAnchor="0.0">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="btnNhanVien" alignment="CENTER" layoutY="108.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Nhân viên" AnchorPane.leftAnchor="0.0">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="btnNCC" alignment="CENTER" layoutY="261.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Nhà cung cấp" AnchorPane.leftAnchor="0.0">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="btnTacGia" alignment="CENTER" layoutY="312.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Tác giả" AnchorPane.leftAnchor="0.0">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="btnHoaDon" alignment="CENTER" layoutY="363.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Hóa đơn" AnchorPane.leftAnchor="0.0">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="btnTHD" alignment="CENTER" layoutY="414.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Tạo hóa đơn" AnchorPane.leftAnchor="0.0">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="btnKhuyenMai" alignment="CENTER" layoutY="465.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Khuyến mãi" AnchorPane.leftAnchor="0.0">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Button>
-               </children>
-            </AnchorPane>
+               <AnchorPane fx:id="anchorPaneMenu" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #00A4EF;">
+                  <children>
+                     <Button fx:id="btnThongKe" layoutY="14.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Thống kê">
+                        <font>
+                           <Font size="16.0" />
+                        </font></Button>
+                     <Button fx:id="btnKhachHang" layoutY="149.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Khách hàng">
+                        <font>
+                           <Font size="16.0" />
+                        </font></Button>
+                     <Button fx:id="btnSanPham" layoutY="104.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Sản phẩm">
+                        <font>
+                           <Font size="16.0" />
+                        </font></Button>
+                     <Button fx:id="btnNhanVien" layoutY="59.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" styleClass="btn" text="Nhân viên">
+                        <font>
+                           <Font size="16.0" />
+                        </font></Button>
+                     <Button fx:id="btnNCC" layoutY="194.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Nhà cung cấp">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Button>
+                     <Button fx:id="btnTacGia" layoutY="284.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Tác giả">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Button>
+                     <Button fx:id="btnHoaDon" layoutY="329.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Hóa đơn">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Button>
+                     <Button fx:id="btnTHD" layoutY="374.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Tạo hóa đơn">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Button>
+                     <Button fx:id="btnKhuyenMai" layoutY="419.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Khuyến mãi">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Button>
+                     <Button fx:id="btnTheLoai" layoutY="464.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Thể loại">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Button>
+                     <Button fx:id="btnNhaXuatBan" layoutY="239.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="224.0" text="Nhà xuất bản">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Button>
+                  </children>
+               </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="563.0" prefWidth="702.0">
                <children>
                   <TableView fx:id="tableView" layoutY="197.0" prefHeight="378.0" prefWidth="726.0">
@@ -90,7 +96,7 @@
                               <HBox fx:id="inforButtonContainer" alignment="CENTER" layoutY="150.0" prefHeight="62.0" prefWidth="279.0" spacing="15.0">
                                  <children>
                                     <Button fx:id="btnAddTacGia" mnemonicParsing="false" onAction="#addTacGia" text="Thêm" />
-                                    <Button mnemonicParsing="false" onAction="#clossInforContainer" text="Đóng" />
+                                    <Button fx:id="closeInforContainer" onAction="#closeInforContainer" text="Đóng" />
                                  </children>
                               </HBox>
                            </children>
